--- a/bookFace.css
+++ b/bookFace.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     display: grid;
-    grid-template-rows: 7rem auto;
-    grid-template-columns: auto auto auto;
+    grid-template-rows: 6rem 10rem auto;
+    grid-template-columns: 20% 40% 40%;
 }
 
 header {
@@ -10,9 +10,7 @@ header {
     grid-row: 1;
     margin: 5px;
 
-    Background: mediumblue;
-    
-    height: 5rem;
+    Background: #483D8B;
 }
 
 header img {
@@ -23,16 +21,34 @@ header img {
     height:auto;
 }
 
+#headerInner {
+    margin-bottom: 0.5rem;
+}
+
 #title {
-    font-size: 3rem;
     margin-left: 1rem;
+    margin-bottom: 0.5rem;
+    margin-right: 3rem;
+
+    font-size: 3rem;
+    color: azure;
+}
+
+#topLinks {
+    margin-right: 4rem;
+    padding: 2rem;
+    
+    text-decoration: none;
+    display: inline-block;
+
+    font-size: 1.5rem;
     color: azure;
 }
 
 #button1 {
     position: absolute;
     right: 1rem;
-    top: 1.65rem;
+    top: 2rem;
 
     border-radius: 0.5rem;
     padding: 0.5rem 1rem;
@@ -52,17 +68,21 @@ header img {
 }
 
 #messages {
+    grid-row: 2 / span 2;
     grid-column: 1;
-    grid-row: 2;
-    margin: 0.5rem;
+    margin: 5px;
 
 	position: fixed;
 	left: 0;
-	top: 5rem;
+	top: 6rem;
 	background: lightgray;
 }
 
-#messages #messageTitle { /* Messages title */
+#messagesInner {
+    margin: 1rem;
+}
+
+#messages #messageTitle {
     font-size: 3rem;
 }
 
@@ -70,6 +90,8 @@ header img {
     font-size: 1.5rem;
     padding-left: 0.5rem;
     padding-top: 1rem;
+
+    border-top: 1px solid gray;
 }
 
 #messagesMore {
@@ -93,13 +115,96 @@ header img {
     color: white;
 }
 
-#feed {
+
+
+
+
+
+
+
+
+#composePost {
     grid-column: 2;
     grid-row: 2;
+
+
+    padding: 1rem;
+
+    border: 1px solid gray;
+}
+
+#composePicture {
+    grid-column: 2;
+    grid-row: 2;
+
+    float: left;
+
+    border-radius: 50%;
+
+    height: 100px;
+    width: 100px;
+}
+
+#postText {
+    margin-left: 1rem;
+    width: 20rem;
+    height: 5rem;
+
+    resize: none;
+}
+
+#composeIcon {
+    margin-top: 0.5rem;
+    height: 30px;
+    width: auto;
+    float: bottom;
+}
+
+#button2 {
+    font-size: 1.05rem;
+    border-radius: 0.5rem;
+    padding: 0.3rem 0.8rem;
+    margin-top: 0.5rem;
+    text-align: center;
+    transition-duration: 0.4s;
+    cursor: pointer;
+
+    float: right;
+
+    text-decoration: none;
+
+    background-color: white; 
+    color: black; 
+    border: 2px solid darkblue;
+}
+
+#button2:hover {
+    background-color: darkblue;
+    color: white;
+}
+
+
+
+
+#feed {
+    grid-column: 2;
+    grid-row: 3;
+
     margin: 1rem;
 
     color: green;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 #explore {
     grid-column: 3;
