--- a/public/login.css
+++ b/public/login.css
@@ -41,7 +41,29 @@
 .create:hover{
     background-color: darkblue;
     color: white;
-} 
+}
+
+.logout {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    display: inline-block;
+    transition-duration: 0.4s;
+    cursor: pointer;
+
+    background-color: white; 
+    color: black; 
+    border: 2px solid darkblue;
+}
+
+.logout:hover{
+    background-color: darkblue;
+    color: white;
+}
 
 .login {
     margin-left: 25rem;
