--- a/public/bookFace.css
+++ b/public/bookFace.css
@@ -278,3 +278,43 @@ header img {
     height: auto;
     width: 300px;
 }
+
+#profilewrap {
+    grid-row: 2;
+    grid-column: 1;
+    margin-right: 5px;
+    margin-left: 5px;
+
+    background: lightgray;
+    
+    border: 1px solid gray;
+    text-decoration: none;
+}
+
+#profile{
+    font-size: 2rem;
+    padding-left: 1rem;  
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    color: black;
+} 
+
+#profilepicture {
+    height: 60px;
+    width: 60px;
+
+    border-radius: 50%;
+
+    margin-left: 1rem;
+
+    float: left;
+}
+
+#username {
+    color: black;
+
+    margin-left: 6rem;
+    margin-top: 1.5rem;
+}
