added profile page functionality. posts by that user are displayed

--- a/public/profile.css
+++ b/public/profile.css
@@ -142,3 +142,27 @@ header img {
 
     margin-left: 1rem;
 }
+
+#post {
+    border: 1px solid gray;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+#postpic {
+    border-radius: 50%;
+    float: left;
+}
+
+#postname {
+    padding-left: 1rem;
+    float: left;
+}
+
+#posttime {
+    float: right;
+}
+
+#postcontent {
+    padding-top: 2.25rem;
+}
