--- a/public/profile.css
+++ b/public/profile.css
@@ -62,21 +62,15 @@ header {
 }
 
 #profilepicture {
+    position: relative;
+    bottom: 10px;
+
     height: 150px;
     width: 150px;
 
     border-radius: 50%;
 
     float: left;
-}
-
-#biography {
-    margin-left: 14rem;
-}
-
-#edit{
-    float: right;
-    margin-right: 1rem;
 }
 
 #username {
