Fixed comments and added account links

--- a/public/bookFace.css
+++ b/public/bookFace.css
@@ -140,6 +140,9 @@ header img {
 #postname {
     padding-left: 1rem;
     float: left;
+
+    text-decoration: none;
+    color: black;
 }
 
 #posttime {
